--- a/src/DotNetCore.Joust/project.json
+++ b/src/DotNetCore.Joust/project.json
@@ -1,19 +1,24 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.1.0-*",
   "buildOptions": {
     "debugType": "portable",
     "emitEntryPoint": true
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "frameworks": {
     "netcoreapp1.0": {
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.1"
+          "version": "1.1.0"
+        },
+        "System.configuration": {
+          "type": "build",
+          "version": "1.0"
         }
       },
-      "imports": "dnxcore50"
+      "imports": [ "net451","dotnet5.6", "dnxcore50","portable-net45" ]
     }
   }
 }
