--- a/src/DAL/project.json
+++ b/src/DAL/project.json
@@ -2,12 +2,11 @@
   "version": "1.1.0-*",
   "buildOptions": {
     "debugType": "portable",
-    "emitEntryPoint": true
+    "emitEntryPoint": false
   },
   "dependencies": {
   },
   "frameworks": {
-    "net452":{},
     "netcoreapp1.0": {
       "dependencies": {
         "Microsoft.NETCore.App": {
@@ -19,7 +18,7 @@
           "version": "2.0.5"
         }
       },
-      "imports": [ "net452","dotnet5.6", "dnxcore50","portable-net45" ]
+      "imports": "dnx452"
     }
   }
 }
