--- a/src/DotNetCore.Joust/project.json
+++ b/src/DotNetCore.Joust/project.json
@@ -1,25 +1,31 @@
 {
-  "version": "1.1.0-*",
+  "version": "1.0.0-*",
   "buildOptions": {
-    "debugType": "portable",
-    "emitEntryPoint": true
+    "debugType": "portable"
   },
   "dependencies": {
+    "Supplier": {
+      "target": "project"
+    },
+    "DataObject":{
+      "target": "project"
+    },
+    "Util":{
+      "target": "project"
+    }
   },
   "frameworks": {
-    "net452":{},
-    "netcoreapp1.0": {
+    "netcoreapp1.1": {
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
-          "version": "1.0.0"
-        },
-        "System.configuration": {
-          "type": "build",
-          "version": "2.0.5"
+          "version": "1.1.0"
         }
       },
-      "imports": [ "net452","dotnet5.6", "dnxcore50","portable-net45" ]
+      "imports": [
+        "dotnet5.4",
+        "portable-net451+win8"
+      ]
     }
   }
 }
