Cleaning up data layer

--- a/src/DAL/project.lock.json
+++ b/src/DAL/project.lock.json
@@ -2185,6 +2185,13 @@
         "runtime": {
           "lib/netstandard1.3/_._": {}
         }
+      },
+      "Util/1.0.0": {
+        "type": "project",
+        "framework": ".NETCoreApp,Version=v1.1",
+        "dependencies": {
+          "Microsoft.NETCore.App": "1.1.0"
+        }
       }
     }
   },
@@ -6998,6 +7005,10 @@
         "ref/xamarintvos10/_._",
         "ref/xamarinwatchos10/_._"
       ]
+    },
+    "Util/1.0.0": {
+      "type": "project",
+      "path": "../Util/project.json"
     }
   },
   "projectFileDependencyGroups": {
