visual code compiling

--- a/src/DataLayer/project.json
+++ b/src/DataLayer/project.json
@@ -10,6 +10,9 @@
     },
     "DataObject":{
         "target": "project"
+    },
+    "Descriptor":{
+      "target": "project"
     }
   },
   "frameworks": {
