--- a/src/DataLayer/project.json
+++ b/src/DataLayer/project.json
@@ -4,7 +4,6 @@
     "debugType": "portable"
   },
   "dependencies": {
-    "System.Configuration":"2.0.5",
     "Util":{
       "target": "project"
     },
@@ -21,7 +20,8 @@
         "Microsoft.NETCore.App": {
           "type": "platform",
           "version": "1.1.0"
-        }
+        },
+         "System.Configuration":"2.0.5"
       },
       "imports": [
         "dotnet5.4",
