--- a/src/Descriptor/project.json
+++ b/src/Descriptor/project.json
@@ -4,8 +4,10 @@
     "debugType": "portable"
   },
   "dependencies": {
-    "Microsoft.Extensions.Configuration":"1.1.0",
     "Util":{
+      "target": "project"
+    },
+    "Configuration": {
       "target": "project"
     }
   },
@@ -20,8 +22,7 @@
       "imports": [
         "dotnet5.4",
         "portable-net451+win8"
-      ],
-      "bin":{"assembly":"C:/Users/Rahm/.nuget/packages/System.Configuration/2.0.5/System.configuration.dll"}
+      ]
     }
   }
 }
