--- a/src/Util/project.json
+++ b/src/Util/project.json
@@ -4,6 +4,9 @@
     "debugType": "portable"
   },
   "dependencies": {
+     "Configuration":{
+      "target": "project"
+    }
   },
   "frameworks": {
     "netcoreapp1.1": {
