--- a/src/Util/project.lock.json
+++ b/src/Util/project.lock.json
@@ -2182,6 +2182,13 @@
         "runtime": {
           "lib/netstandard1.3/_._": {}
         }
+      },
+      "Configuration/1.0.0": {
+        "type": "project",
+        "framework": ".NETCoreApp,Version=v1.1",
+        "dependencies": {
+          "Microsoft.NETCore.App": "1.1.0"
+        }
       }
     }
   },
@@ -6985,10 +6992,16 @@
         "ref/xamarintvos10/_._",
         "ref/xamarinwatchos10/_._"
       ]
+    },
+    "Configuration/1.0.0": {
+      "type": "project",
+      "path": "../Configuration/project.json"
     }
   },
   "projectFileDependencyGroups": {
-    "": [],
+    "": [
+      "Configuration"
+    ],
     ".NETCoreApp,Version=v1.1": [
       "Microsoft.NETCore.App >= 1.1.0"
     ]
