--- a/src/DotNetCore.Joust/project.json
+++ b/src/DotNetCore.Joust/project.json
@@ -1,7 +1,8 @@
 {
   "version": "1.0.0-*",
   "buildOptions": {
-    "debugType": "portable"
+    "debugType": "portable",
+      "emitEntryPoint": true
   },
   "dependencies": {
     "Supplier": {
