--- a/app.config
+++ b/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-<add key="data-dir" value="../../../vsjoust-1/data"/>
-<add key="meta-filename" value="../../../vsjoust-1/data/FileDescriptor.xml"/>
+<add key="data-dir" value="data"/>
+<add key="meta-filename" value="data/FileDescriptor.xml"/>
 </appSettings>
 </configuration>
